fix(cors): allow all onrender.com subdomains and localhost in WebConfig and SecurityConfig